; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_memory_object.c_memory_object_cluster_size.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_memory_object.c_memory_object_cluster_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@VM_OBJECT_NULL = common dso_local global %struct.TYPE_5__* null, align 8
@KERN_INVALID_ARGUMENT = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @memory_object_cluster_size(i32 %0, i64* %1, i32* %2, i32* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  %12 = alloca %struct.TYPE_5__*, align 8
  %13 = alloca i64, align 8
  store i32 %0, i32* %7, align 4
  store i64* %1, i64** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i64 %4, i64* %11, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call %struct.TYPE_5__* @memory_object_control_to_vm_object(i32 %14)
  store %struct.TYPE_5__* %15, %struct.TYPE_5__** %12, align 8
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** @VM_OBJECT_NULL, align 8
  %18 = icmp eq %struct.TYPE_5__* %16, %17
  br i1 %18, label %26, label %19

19:                                               ; preds = %5
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64*, i64** %8, align 8
  %24 = load i64, i64* %23, align 8
  %25 = icmp sgt i64 %22, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %19, %5
  %27 = load i32, i32* @KERN_INVALID_ARGUMENT, align 4
  store i32 %27, i32* %6, align 4
  br label %50

28:                                               ; preds = %19
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = load i64*, i64** %8, align 8
  %33 = load i64, i64* %32, align 8
  %34 = sub nsw i64 %33, %31
  store i64 %34, i64* %32, align 8
  %35 = load i64, i64* %11, align 8
  store i64 %35, i64* %13, align 8
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %37 = load i64*, i64** %8, align 8
  %38 = bitcast i64* %37 to i32*
  %39 = load i32*, i32** %9, align 8
  %40 = load i64, i64* %13, align 8
  %41 = load i32*, i32** %10, align 8
  %42 = call i32 @vm_object_cluster_size(%struct.TYPE_5__* %36, i32* %38, i32* %39, i64 %40, i32* %41)
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %44 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = load i64*, i64** %8, align 8
  %47 = load i64, i64* %46, align 8
  %48 = add nsw i64 %47, %45
  store i64 %48, i64* %46, align 8
  %49 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %49, i32* %6, align 4
  br label %50

50:                                               ; preds = %28, %26
  %51 = load i32, i32* %6, align 4
  ret i32 %51
}

declare dso_local %struct.TYPE_5__* @memory_object_control_to_vm_object(i32) #1

declare dso_local i32 @vm_object_cluster_size(%struct.TYPE_5__*, i32*, i32*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
